<resources>
    <string name="app_name">TruckParkApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_firestore_test">FirestoreTestActivity</string>
    <string name="title_activity_main">TruckPark</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="entered_truck_park_slot">Truckparkplatz befahren</string>
    <string name="menu_map">Map</string>
    <string name="menu_destination">Ziel</string>

    <!-- Destination Fragment -->
    <string name="destination_street">Straße</string>
    <string name="destination_postal_number">Postleitzahl</string>
    <string name="destination_place">Ort</string>
    <string name="destination_get_route">Route berechnen</string>

    <string name="enter_free_slots">Bitte hilf uns die Genauigkeit der Vorhersage zu erhöhen, indem du die aktuelle Parkplatzauslastung angibst.</string>
    <string name="current_truck_park_slot">Du befindest dich auf dem Parkplatz n/a</string>

    <!-- REST-Server -->
    <string name="rest_server_url">http://truckpark.herokuapp.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="could_not_read_directions_api_toast">Directions API konnte nicht gelesen werden. Bitte versuchen Sie es erneut</string>

    <string name="menu_input_free_slots">Free Slots</string>
    <string name="how_many_trucks">Wie viele LKWs befinden sich auf dem Parkplatz %s?</string>
    <string name="button_send">Absenden</string>
    <string name="updatedFreeSlots">Danke, Anzahl freier Plätze aktuallisiert</string>
    <string name="app_icon">app icon</string>
</resources>
